Fix misc stuff from lighthouse (#81)
* Fix misc stuff from lighthouse

- Icons in list were resizing to be too small.
- Added robots.txt (full exclude for now)
- Add favicon.ico placeholder
- Added page title using helmet (react-helmet + gatsby-plugin-react-helmet)
Note: not sure if react-helmet can be in dev section of package.json?

* Move helmet to header file
- Moved  `<Helmet><title>{title}</title></Helmet>` to Header.
- Added ts support for Helmet.
* Fix title header

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -17,4 +17,11 @@
 
 .j40-two-column-icons-spacing {
   padding-right: 1em;
+  width: 2.3em;
+  max-width: revert;
+}
+
+.j40-title {
+  padding: 2em;
+  text-align: center;
 }
